# agentfactory

./: .gitattributes  .gitignore  .nxignore  .vercelignore  CLAUDE.md  CLONE_GUIDE.md  CONTRIBUTING.md  DEPLOY_CHECKLIST.md  DEPLOY_TO_VERCEL.md  FINAL_SSO_SETUP.md  GEMINI.md  Makefile  README.md  VERCEL_DEPLOYMENT.md  VERCEL_QUICK_START.md  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  vercel.json
apps/study-mode-api/: .dockerignore  .env.example  Dockerfile  README.md  project.json  pyproject.toml  start.bat  start_clean.py
apps/study-mode-api/docs/: ARCHITECTURE.md  TEST_PLAN.md
apps/study-mode-api/evals/: README.md  run_eval.py  tutor_test_data.jsonl
apps/study-mode-api/src/study_mode_api/: __init__.py  auth.py  chatkit_server.py  config.py  main.py
apps/study-mode-api/src/study_mode_api/chatkit_store/: __init__.py  cached_postgres_store.py  config.py  context.py  postgres_store.py
apps/study-mode-api/src/study_mode_api/core/: __init__.py  lifespan.py  rate_limit.py  redis_cache.py
apps/study-mode-api/src/study_mode_api/fte/: __init__.py  answer_verification.py  ask_agent.py  teach_agent.py  teach_context.py  teach_instructions.py
apps/study-mode-api/src/study_mode_api/metering/: __init__.py  client.py  hooks.py
apps/study-mode-api/src/study_mode_api/services/: __init__.py  content_loader.py  lesson_chunker.py  session_state.py
apps/study-mode-api/tests/: __init__.py  conftest.py  test_answer_verification.py  test_auth.py  test_cached_postgres_store.py  test_chatkit.py  test_config.py  test_content_loader.py  test_health.py  test_metering_hooks.py  test_postgres_store.py  test_rate_limit.py  test_redis_cache.py
apps/token-metering-api/: .env.example  Dockerfile  README.md  docker-compose.yaml  project.json  pyproject.toml
apps/token-metering-api/scripts/: seed_pricing.sql
apps/token-metering-api/src/token_metering_api/: __init__.py  config.py  main.py
apps/token-metering-api/src/token_metering_api/core/: __init__.py  auth.py  cache.py  database.py  exceptions.py  lifespan.py  metrics.py  rate_limit.py  redis.py
apps/token-metering-api/src/token_metering_api/models/: __init__.py  account.py  allocation.py  pricing.py  transaction.py
apps/token-metering-api/tests/: __init__.py  conftest.py  helpers.py  test_account_service.py  test_api_design.py  test_api_metering.py  test_auth.py  test_balance.py  test_caching.py  test_concurrency.py  test_credit_calculation.py  test_e2e_user_journeys.py  test_edge_cases.py  test_health.py  test_integration_client.py  test_metering_service.py  test_redis_integration.py  test_security.py  test_spec_compliance.py  test_v5_balance_only.py
(+2075 files in other folders)
